--- a/ui/core/src/config.devnet.json
+++ b/ui/core/src/config.devnet.json
@@ -6,6 +6,7 @@
   "sifChainId": "sifchain-devnet",
   "web3Provider": "metamask",
   "nativeAsset": "rowan",
+  "blockExplorerUrl": "https://blockexplorer-devnet.sifchain.finance",
   "cryptoeconomicsUrl": "https://api-cryptoeconomics-devnet.sifchain.finance/api",
   "bridgebankContractAddress": "0x96DC6f02C66Bbf2dfbA934b8DafE7B2c08715A73",
   "keplrChainConfig": {
