--- a/ui/core/src/config.mainnet.json
+++ b/ui/core/src/config.mainnet.json
@@ -6,6 +6,7 @@
   "sifChainId": "sifchain",
   "web3Provider": "metamask",
   "nativeAsset": "rowan",
+  "blockExplorerUrl": "https://blockexplorer.sifchain.finance",
   "cryptoeconomicsUrl": "https://api-cryptoeconomics.sifchain.finance/api",
   "bridgebankContractAddress": "0xB5F54ac4466f5ce7E0d8A5cB9FE7b8c0F35B7Ba8",
   "keplrChainConfig": {
