--- a/ui/core/package.json
+++ b/ui/core/package.json
@@ -22,6 +22,7 @@
     "./react": "./lib/sdk-react/index.js"
   },
   "dependencies": {
+    "@async-generator/subject": "^1.0.3",
     "@cosmjs/launchpad": "^0.23.0",
     "@cosmjs/stargate": "^0.25.5",
     "@cosmjs/tendermint-rpc": "^0.25.5",
