--- a/ui/core/src/config/networks/sifchain/config.mainnet.json
+++ b/ui/core/src/config/networks/sifchain/config.mainnet.json
@@ -3,7 +3,7 @@
   "sifApiUrl": "https://api.sifchain.finance",
   "sifWsUrl": "wss://rpc.sifchain.finance/websocket",
   "sifRpcUrl": "https://rpc.sifchain.finance",
-  "sifChainId": "sifchain",
+  "sifChainId": "sifchain-1",
   "web3Provider": "metamask",
   "nativeAsset": "rowan",
   "blockExplorerUrl": "https://blockexplorer.sifchain.finance",
@@ -11,7 +11,7 @@
   "bridgebankContractAddress": "0xB5F54ac4466f5ce7E0d8A5cB9FE7b8c0F35B7Ba8",
   "keplrChainConfig": {
     "chainName": "Sifchain",
-    "chainId": "",
+    "chainId": "sifchain-1",
     "rpc": "",
     "rest": "",
     "stakeCurrency": {
