--- a/.github/workflows/promote-to-mainnet.yml
+++ b/.github/workflows/promote-to-mainnet.yml
@@ -2,37 +2,40 @@ name: Promote build to mainnet
 on:
   workflow_dispatch:
     inputs:
-      dnslink:
-        description: 'Record ID on Cloudflare to point dex.sifchain.finance to'
+      source_dnslink:
+        description: 'Source record ID on Cloudflare to copy from'
         required: true
         default: '_dnslink.ipfs-staging'
+      dest_dnslink:
+        description: 'Target record ID on Cloudflare to set'
+        required: true
+        default: '_dnslink.ipfs-dex'
 
 jobs:
   flip_to_mainnet:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Get value of given dnslink
+      - name: Get value of given dnslink and set to env.DNSLINK_RECORD
         shell: bash
         run: |
           response=$(curl \
             -H "Authorization: Bearer $CLOUDFLARE_TOKEN" \
             -H "Content-Type: application/json" \
-            -s "https://api.cloudflare.com/client/v4/zones/$CLOUDFLARE_ZONE_ID/dns_records?name=$RECORD_NAME.$RECORD_DOMAIN")
+            -s "https://api.cloudflare.com/client/v4/zones/$CLOUDFLARE_ZONE_ID/dns_records?name=sifchain.finance.${{ github.event.inputs.source_dnslink }}")
 
           success=$(jq -r  '.success' <<< "${response}" )
 
           if [ $success != "true" ]; then
-            echo "Pages Update: Failed to read record ${{ github.event.inputs.dnslink }}!"
+            echo "Pages Update: Failed to read record '${{ github.event.inputs.source_dnslink }}'"
             errors=$(jq -r  '.errors' <<< "${response}")
-            echo "Errors: $errors"
-            exit 1
+            jcho "Errors: $errors" exit 1
           fi
 
           DNSLINK_RECORD=$(jq -r  '.result[0].content' <<< "${response}" )
-          echo "DNSLINK_RECORD=$DNSLINK_RECORD" >> $GITHUB_ENV
           echo "RECORD_DOMAIN=sifchain.finance" >> $GITHUB_ENV
-          echo "RECORD_NAME=_dnslink.ipfs-devnet" >> $GITHUB_ENV
+          echo "RECORD_NAME={{ github.events.inputs.dest_dnslink }}" >> $GITHUB_ENV
+          echo "DNSLINK_RECORD=$DNSLINK_RECORD" >> $GITHUB_ENV
           echo "env: $(cat $GITHUB_ENV)"
 
       - name: Update cloudflare DNSLink
