--- a/ui/core/package.json
+++ b/ui/core/package.json
@@ -64,6 +64,7 @@
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.167",
     "babel-jest": "^26.5.2",
+    "coinbase-pro-node": "^3.0.8",
     "concurrently": "^5.3.0",
     "jest": "^24.9.0",
     "jest-websocket-mock": "^2.2.0",
