--- a/ui/react-example/package.json
+++ b/ui/react-example/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@sifchain/sdk": "^1.0.0",
+    "@tippyjs/react": "^4.2.5",
     "buffer": "^6.0.3",
     "process": "^0.11.10",
     "react": "^17.0.2",
